--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -35,29 +35,26 @@
     <string name="info_ledger_enabled">Ledger permesita, frapetu por detaloj.</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>Vi entajpis Bitmono-adreson.</b><br/>
-        <i>Vi sendos XMR-on, kaj per la<b>SideShift.ai</b>-servo, la ricevanto havos BTC-on.</i>
+        <b>Vi entajpis %1$s-adreson.</b><br/>
+        <i>Vi sendos XMR-on, kaj per la<b>SideShift.ai</b>-servo, la ricevanto havos %1$s-on.</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">mendo al SideShift.ai</string>
 
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
     <string name="info_send_xmrto_paid">Konfirmo okazonta</string>
     <string name="info_send_xmrto_unpaid">Pago okazonta</string>
     <string name="info_send_xmrto_error">SideShift.ai eraro (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC sendiĝis!</string>
+    <string name="info_send_xmrto_sent">%1$s sendiĝis!</string>
     <string name="info_send_xmrto_query">Informpetante &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
-        <b>Vi povas sendi %1$s &#8212; %2$s BTC</b>.<br/>
-        <i><b>SideShift.ai</b> proponas al vi tiun kurzon: <b>%3$s BTC</b> <u>nun</u></i>.
-    ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>Kvantoj ĝis <b>%1$s BTC</b> sendiĝos <u>senatende</u>!</i>
+        <b>Vi povas sendi %1$s &#8212; %2$s %4$s</b>.<br/>
+        <i><b>SideShift.ai</b> proponas al vi tiun kurzon: <b>%3$s %4$s/XMR</b> <u>nun</u></i>.
     ]]></string>
 
-    <string name="send_available_btc">Saldo: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">Saldo: %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; Paga-ID integriĝis</string>
     <string name="info_prepare_tx">Preparante vian transakcion</string>
@@ -75,13 +72,13 @@
     <string name="text_noretry_monero">Ni blokiĝis ĉi tie!</string>
     <string name="text_noretry">Uh-oh, ŝajne SideShift.ai ne disponas momente!</string>
 
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(kurzo: %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(kurzo: %1$s %2$s/XMR)</string>
 
     <string name="label_send_btc_xmrto_info">Vizitu SideShift.ai por helpo kaj sekvado</string>
     <string name="label_send_btc_xmrto_key_lb">Sekreta ŝlosilo\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">SideShift.ai sekreta ŝlosilo</string>
-    <string name="label_send_btc_address">Ricevanta BTC-adreso</string>
+    <string name="label_send_btc_address">Ricevanta %1$s-adreso</string>
     <string name="label_send_btc_amount">Kvanto</string>
 
     <string name="label_send_txid">Transakcia ID</string>
@@ -251,11 +248,9 @@
     <string name="tx_id">TX ID</string>
     <string name="tx_key">TX Ŝlosilo</string>
     <string name="tx_destination">Destino</string>
-    <string name="tx_destination_btc">Destino\n(BTC)</string>
     <string name="tx_paymentId">Paga-ID</string>
     <string name="tx_blockheight">Bloko</string>
     <string name="tx_amount">Kvanto</string>
-    <string name="tx_amount_btc">Kvanto\n(BTC)</string>
     <string name="tx_fee">Kosto</string>
     <string name="tx_transfers">Transigoj</string>
     <string name="tx_notes">Notoj</string>
@@ -356,11 +351,6 @@
 
     <string name="send_address_hint">Ricevanto</string>
 
-    <string name="xmrto_error_001">SideShift.ai ne enretas - provu pli poste</string>
-    <string name="xmrto_error_004">BTC-kvanto tro grandas</string>
-    <string name="xmrto_error_010">La paga URL malvalidas aŭ ne ĝisdatiĝis</string>
-    <string name="xmrto_error_012">Tro da mendoj</string>
-
     <string name="street_sweep_amount">ĈIO!</string>
 
     <string name="menu_ledger_seed">Convert Ledger Seed</string>
@@ -383,8 +373,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -408,4 +398,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
