--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -35,30 +35,27 @@
     <string name="info_ledger_enabled">Ledger activé, tapez pour plus d\'infos.</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>Vous avez entré une adresse Bitcoin.</b><br/>
-        <i>Vous envoyez des XMR et le destinataire recevra des BTC via le service <b>SideShift.ai</b>.</i>
+        <b>Vous avez entré une adresse %1$s.</b><br/>
+        <i>Vous envoyez des XMR et le destinataire recevra des %1$s via le service <b>SideShift.ai</b>.</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">Ordres SideShift.ai</string>
 
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
 
     <string name="info_send_xmrto_paid">En Attente de Confirmation</string>
     <string name="info_send_xmrto_unpaid">En Attente de Paiement</string>
     <string name="info_send_xmrto_error">Erreur SideShift.ai (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC Envoyé !</string>
+    <string name="info_send_xmrto_sent">%1$s Envoyé !</string>
     <string name="info_send_xmrto_query">Interrogation &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
-        <b>Vous pouvez envoyer %1$s &#8212; %2$s BTC</b>.<br/>
-        <i><b>SideShift.ai</b> vous donne un taux de change de <b>%3$s BTC</b> <u>actuellement</u></i>.
-    ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>Les montant n\'excédant pas <b>%1$s BTC</b> seront envoyés <u>immédiatement</u>!</i>
+        <b>Vous pouvez envoyer %1$s &#8212; %2$s %4$s</b>.<br/>
+        <i><b>SideShift.ai</b> vous donne un taux de change de <b>%3$s %4$s/XMR</b> <u>actuellement</u></i>.
     ]]></string>
 
-    <string name="send_available_btc">Solde : %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">Solde : %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; ID de Paiement intégré</string>
     <string name="info_prepare_tx">Préparation de votre transaction</string>
@@ -76,13 +73,13 @@
     <string name="text_noretry_monero">Maintenant on est coincé ici !</string>
     <string name="text_noretry">Oh-oh, SideShift.ai n\'a pas l\'air disponible pour le moment !</string>
 
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(Taux : %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(Taux : %1$s %2$s/XMR)</string>
 
     <string name="label_send_btc_xmrto_info">Visitez SideShift.ai pour l\'assistance &amp; le suivi</string>
     <string name="label_send_btc_xmrto_key_lb">Clef Secrète\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">Clef Secrète SideShift.ai</string>
-    <string name="label_send_btc_address">Adresse BTC Destination</string>
+    <string name="label_send_btc_address">Adresse %1$s Destination</string>
     <string name="label_send_btc_amount">Montant</string>
 
     <string name="label_send_txid">ID de Transaction</string>
@@ -248,11 +245,9 @@
     <string name="tx_id">ID TX</string>
     <string name="tx_key">Clef TX</string>
     <string name="tx_destination">Destination</string>
-    <string name="tx_destination_btc">Destination\n(BTC)</string>
     <string name="tx_paymentId">ID de Paiement</string>
     <string name="tx_blockheight">Bloc</string>
     <string name="tx_amount">Montant</string>
-    <string name="tx_amount_btc">Montant\n(BTC)</string>
     <string name="tx_fee">Frais</string>
     <string name="tx_transfers">Transferts</string>
     <string name="tx_notes">Notes</string>
@@ -360,11 +355,6 @@
     <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
     <string name="send_address_hint">Destinataire</string>
 
-    <string name="xmrto_error_001">SideShift.ai hors ligne - réessayer ultérieurement</string>
-    <string name="xmrto_error_004">Montant BTC hors limites</string>
-    <string name="xmrto_error_010">URL de Paiement invalide ou périmée</string>
-    <string name="xmrto_error_012">Trop de requêtes</string>
-
     <string name="street_sweep_amount">TOTALITÉ!</string> <!-- as in: "everything in the account" = "all the money" -->
 
     <string name="menu_ledger_seed">Convertir mnémonique Ledger</string>
@@ -387,8 +377,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -412,4 +402,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
