--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -35,30 +35,27 @@
     <string name="info_ledger_enabled">Ledger aktivovaný, klepni pre viac info.</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>Vložil si Bitcoin adresu.</b><br/>
-        <i>Pošleš XMR a adresát dostane BTC cez službu <b>SideShift.ai</b>.</i>
+        <b>Vložil si %1$s adresu.</b><br/>
+        <i>Pošleš XMR a adresát dostane %1$s cez službu <b>SideShift.ai</b>.</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">SideShift.ai Objednávka</string>
 
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
 
     <string name="info_send_xmrto_paid">Čaká na Potvrdenie</string>
     <string name="info_send_xmrto_unpaid">Čakajúca Platba</string>
     <string name="info_send_xmrto_error">SideShift.ai Chyba (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC Odoslané!</string>
+    <string name="info_send_xmrto_sent">%1$s Odoslané!</string>
     <string name="info_send_xmrto_query">Zisťujem &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
-        <b>Môžeš poslať %1$s &#8212; %2$s BTC</b>.<br/>
-        <i><b>SideShift.ai</b> ti dáva výmenný kurz of <b>%3$s BTC</b> <u>práve teraz</u></i>.
-    ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>čiastka do <b>%1$s BTC</b> bude odoslaná <u>okamžite</u>!</i>
+        <b>Môžeš poslať %1$s &#8212; %2$s %4$s</b>.<br/>
+        <i><b>SideShift.ai</b> ti dáva výmenný kurz of <b>%3$s %4$s/XMR</b> <u>práve teraz</u></i>.
     ]]></string>
 
-    <string name="send_available_btc">Zostatok: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">Zostatok: %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; Payment ID integrované</string>
     <string name="info_prepare_tx">Pripravujem transakciu</string>
@@ -76,13 +73,13 @@
     <string name="text_noretry_monero">Uviazli sme tu!</string>
     <string name="text_noretry">Myslím, že služba SideShift.ai nie je momentálne dostupná!</string>
 
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(Kurz: %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(Kurz: %1$s %2$s/XMR)</string>
 
     <string name="label_send_btc_xmrto_info">Navštív SideShift.ai pre podporu &amp; tracking</string>
     <string name="label_send_btc_xmrto_key_lb">Tajný kľúč\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">SideShift.ai Tajný kľúč</string>
-    <string name="label_send_btc_address">Cieľová BTC Adresa</string>
+    <string name="label_send_btc_address">Cieľová %1$s Adresa</string>
     <string name="label_send_btc_amount">Čiastka</string>
 
     <string name="label_send_txid">ID Transakcie</string>
@@ -243,11 +240,9 @@
     <string name="tx_id">TX ID</string>
     <string name="tx_key">Kľúč Transakcie</string>
     <string name="tx_destination">Cieľ</string>
-    <string name="tx_destination_btc">Cieľová (BTC)</string>
     <string name="tx_paymentId">ID Platby</string>
     <string name="tx_blockheight">Blok</string>
     <string name="tx_amount">Suma</string>
-    <string name="tx_amount_btc">Čiastka\n(BTC)</string>
     <string name="tx_fee">poplatok</string>
     <string name="tx_transfers">Poslaných</string>
     <string name="tx_notes">Poznámky</string>
@@ -357,11 +352,6 @@
     <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
     <string name="send_address_hint">Príjemca</string>
 
-    <string name="xmrto_error_001">SideShift.ai je offline - skús neskôr</string>
-    <string name="xmrto_error_004">Množstvo BTC je mimo rámca</string>
-    <string name="xmrto_error_010">Neplatná alebo stará URL platby</string>
-    <string name="xmrto_error_012">Príliš veľa požiadaviek</string>
-
     <string name="street_sweep_amount">VŠETKO!</string> <!-- as in: "everything in the account" = "all the money" -->
 
     <string name="menu_ledger_seed">Konvertuj Ledger Seed</string>
@@ -384,8 +374,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -409,4 +399,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
