--- a/app/src/main/res/values-cat/strings.xml
+++ b/app/src/main/res/values-cat/strings.xml
@@ -35,29 +35,26 @@
     <string name="info_ledger_enabled">Ledger habilitat, premi aquí per més informació.</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>Heu introduït una adreça de Bitcoin.</b><br/>
-        <i>Està a punt d\'enviar XMR i el destinatari rebrà BTC a través del servei <b>SideShift.ai</b> service.</i>
+        <b>Heu introduït una adreça %1$s.</b><br/>
+        <i>Està a punt d\'enviar XMR i el destinatari rebrà %1$s a través del servei <b>SideShift.ai</b> service.</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">Ordre SideShift.ai</string>
 
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
     <string name="info_send_xmrto_paid">Confirmació Pendent</string>
     <string name="info_send_xmrto_unpaid">Pagament Pendent</string>
     <string name="info_send_xmrto_error">Error de SideShift.ai (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC Enviats!</string>
+    <string name="info_send_xmrto_sent">%1$s Enviats!</string>
     <string name="info_send_xmrto_query">Consultant &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
-        <b>You can send %1$s &#8212; %2$s BTC</b>.<br/>
-        <i><b>SideShift.ai</b> està oferint una tasa de canvi de <b>%3$s BTC</b> <u>en aquest moment</u></i>.
-    ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>Quantitats fins a <b>%1$s BTC</b> seran enviats <u>a l\'instant</u>!</i>
+        <b>You can send %1$s &#8212; %2$s %4$s</b>.<br/>
+        <i><b>SideShift.ai</b> està oferint una tasa de canvi de <b>%3$s %4$s/XMR</b> <u>en aquest moment</u></i>.
     ]]></string>
 
-    <string name="send_available_btc">Balanç: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">Balanç: %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; ID de pagment integrat</string>
     <string name="info_prepare_tx">Preparant la seva transacció</string>
@@ -75,13 +72,13 @@
     <string name="text_noretry_monero">Vatua l\'olla! Sembla ser que estem encallats!</string>
     <string name="text_noretry">Ups, sembla que SideShift.ai no està disponible ara mateix!</string>
 
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(Canvi: %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(Canvi: %1$s %2$s/XMR)</string>
 
     <string name="label_send_btc_xmrto_info">Visita SideShift.ai per suport i seguiment</string>
     <string name="label_send_btc_xmrto_key_lb">Clau secreta\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">Clau secreta SideShift.ai</string>
-    <string name="label_send_btc_address">Adreça BTC de destí</string>
+    <string name="label_send_btc_address">Adreça %1$s de destí</string>
     <string name="label_send_btc_amount">Quantitat</string>
 
     <string name="label_send_txid">ID de transacció</string>
@@ -251,11 +248,9 @@
     <string name="tx_id">ID de transacció</string>
     <string name="tx_key">Clau de transacció</string>
     <string name="tx_destination">Destí</string>
-    <string name="tx_destination_btc">Destí\n(BTC)</string>
     <string name="tx_paymentId">ID de pagament</string>
     <string name="tx_blockheight">Bloc</string>
     <string name="tx_amount">Quantitat</string>
-    <string name="tx_amount_btc">Quantitat\n(BTC)</string>
     <string name="tx_fee">Comissió</string>
     <string name="tx_transfers">Transferències</string>
     <string name="tx_notes">Notes</string>
@@ -354,11 +349,6 @@
 
     <string name="send_address_hint">Receptor</string>
 
-    <string name="xmrto_error_001">SideShift.ai fora de línia - intenti-ho més tard</string>
-    <string name="xmrto_error_004">Quantitat de BTC fora dels límits</string>
-    <string name="xmrto_error_010">URL de pagament no vàlida o obsoleta</string>
-    <string name="xmrto_error_012">Massa peticions</string>
-
     <string name="street_sweep_amount">TOT!</string>
 
     <string name="menu_ledger_seed">Convertir la llavor del Ledger</string>
@@ -381,8 +371,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -406,4 +396,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
