--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -218,23 +218,20 @@
     <string name="fab_restore_key">Restaurar monedero con claves privadas</string>
     <string name="fab_restore_seed">Restaurar monedero con semilla de 25 palabras</string>
     <string name="info_xmrto"><![CDATA[
-        <b>Ingresaste una dirección Bitcoin</b><br/>
-        <i>Vas a enviar XMR y el destinatario recibirá BTC usando el servicio <b>SideShift.ai</b>.</i>
+        <b>Ingresaste una dirección %1$s</b><br/>
+        <i>Vas a enviar XMR y el destinatario recibirá %1$s usando el servicio <b>SideShift.ai</b>.</i>
     ]]></string>
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
     <string name="info_send_xmrto_paid">Confirmación pendiente</string>
     <string name="info_send_xmrto_unpaid">Pago pendiente</string>
     <string name="info_send_xmrto_error">Error de SideShift.ai (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC Enviados!</string>
+    <string name="info_send_xmrto_sent">%1$s Enviados!</string>
     <string name="info_send_xmrto_query">Consultando &#8230;</string>
     <string name="info_send_xmrto_parms"><![CDATA[
-         <b>Puedes enviar %1$s &#8212; %2$s BTC</b>.<br/>
-         <i><b>SideShift.ai</b> está ofreciendo una tasa de cambio de <b>%3$s BTC</b> <u>en este momento</u></i>.
+        <b>Puedes enviar %1$s &#8212; %2$s %4$s</b>.<br/>
+        <i><b>SideShift.ai</b> está ofreciendo una tasa de cambio de <b>%3$s %4$s/XMR</b> <u>en este momento</u></i>.
     ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>Montos hasta <b>%1$s BTC</b> serán enviados <u>en el momento</u>!</i>
-    ]]></string>
-    <string name="send_available_btc">Saldo: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">Saldo: %2$s %3$s (%1$s XMR)</string>
     <string name="label_send_progress_xmrto_create">Creando orden SideShift.ai</string>
     <string name="label_send_progress_xmrto_query">Consultando orden SideShift.ai</string>
     <string name="label_send_progress_create_tx">Preparando transacción Monero</string>
@@ -244,12 +241,12 @@
     <string name="text_retry">Toca para reintentar</string>
     <string name="text_noretry_monero">Parece que estamos atascados!</string>
     <string name="text_noretry">Oh-oh, parece que SideShift.ai no está disponible ahora!</string>
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(Cambio: %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(Cambio: %1$s %2$s/XMR)</string>
     <string name="label_send_btc_xmrto_info">Visita https://sideshift.ai para soporte y rastreo</string>
     <string name="label_send_btc_xmrto_key_lb">Clave secreta\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">Clave secreta SideShift.ai</string>
-    <string name="label_send_btc_address">Dirección BTC destino</string>
+    <string name="label_send_btc_address">Dirección %1$s destino</string>
     <string name="label_send_btc_amount">Monto</string>
     <string name="send_xmrto_timeout">Oye, esperaste demasiado!</string>
     <string name="label_copy_xmrtokey">Clave</string>
@@ -261,8 +258,6 @@
     <string name="send_total_btc_label">Total (XMR)</string>
     <string name="send_amount">%1$s XMR</string>
     <string name="send_fee">+%1$s Comisión</string>
-    <string name="tx_destination_btc">Destino\n(BTC)</string>
-    <string name="tx_amount_btc">Monto\n(BTC)</string>
     <string name="about_whoami">Soy monerujo</string>
     <string name="info_send_xmrto_success_order_label">Orden SideShift.ai</string>
 
@@ -347,11 +342,6 @@
     <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
     <string name="send_address_hint">Receptor</string>
 
-    <string name="xmrto_error_001">SideShift.ai offline - try again later</string>
-    <string name="xmrto_error_004">BTC amount out of bounds</string>
-    <string name="xmrto_error_010">Invalid or outdated Payment URL</string>
-    <string name="xmrto_error_012">Too many requests</string>
-
     <string name="street_sweep_amount">EVERYTHING!</string> <!-- as in: "everything in the account" = "all the money" -->
 
     <string name="menu_ledger_seed">Convert Ledger Seed</string>
@@ -374,8 +364,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -399,4 +389,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
