--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -35,29 +35,26 @@
     <string name="info_ledger_enabled">レッジャーは有効化されています。詳細はタップしてください。</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>あなたが入力したのはビットコインのアドレスです。</b><br/>
-        <i>あなたはXMRを送金し、受け手は SideShift.ai のサービスを利用してBTCを受取ります。</i>
+        <b>あなたが入力したのは%1$sのアドレスです。</b><br/>
+        <i>あなたはXMRを送金し、受け手は SideShift.ai のサービスを利用して%1$sを受取ります。</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">SideShift.ai の注文</string>
 
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
     <string name="info_send_xmrto_paid">承認を待っています</string>
     <string name="info_send_xmrto_unpaid">支払いを待っています</string>
     <string name="info_send_xmrto_error">SideShift.ai のエラー (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTCが送金されました!</string>
+    <string name="info_send_xmrto_sent">%1$sが送金されました!</string>
     <string name="info_send_xmrto_query">問い合わせ中 &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
-        <b>%1$s から %2$s BTC を送金することができます。</b><br/>
-        <i><b>SideShift.ai</b> での交換レートは<u>現在</u><b>%3$s BTC</b>です。</i>
-    ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i><b>%1$s BTC</b> までの数量は <u>即時に</u>送金可能です!</i>
+        <b>%1$s から %2$s %4$s を送金することができます。</b><br/>
+        <i><b>SideShift.ai</b> での交換レートは<u>現在</u><b>%3$s %4$s/XMR</b>です。</i>
     ]]></string>
 
-    <string name="send_available_btc">残高: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">残高: %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; ペイメントID組み込み済み</string>
     <string name="info_prepare_tx">取引を準備しています</string>
@@ -75,13 +72,13 @@
     <string name="text_noretry_monero">私達はここで立ち往生のようです!</string>
     <string name="text_noretry">あーあ、 SideShift.ai は現在利用不能のようです!</string>
 
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(レート: %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(レート: %1$s %2$s/XMR)</string>
 
     <string name="label_send_btc_xmrto_info">サポートと追跡については SideShift.ai をご覧ください</string>
     <string name="label_send_btc_xmrto_key_lb">シークレットキー\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">SideShift.ai のシークレットキー</string>
-    <string name="label_send_btc_address">支払先の BTC アドレス</string>
+    <string name="label_send_btc_address">支払先の %1$s アドレス</string>
     <string name="label_send_btc_amount">数量</string>
 
     <string name="label_send_txid">取引ID</string>
@@ -251,11 +248,9 @@
     <string name="tx_id">取引ID</string>
     <string name="tx_key">取引キー</string>
     <string name="tx_destination">送金先</string>
-    <string name="tx_destination_btc">送金先\n(BTC)</string>
     <string name="tx_paymentId">ペイメントID</string>
     <string name="tx_blockheight">ブロック</string>
     <string name="tx_amount">数量</string>
-    <string name="tx_amount_btc">数量\n(BTC)</string>
     <string name="tx_fee">手数料</string>
     <string name="tx_transfers">送金</string>
     <string name="tx_notes">メモ</string>
@@ -359,11 +354,6 @@
     <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
     <string name="send_address_hint">受け取り手</string>
 
-    <string name="xmrto_error_001">SideShift.aiはオフラインです。もう一度お試しください</string>
-    <string name="xmrto_error_004">BTCの金額は範囲外</string>
-    <string name="xmrto_error_010">ペイメントURLは不正古いです</string>
-    <string name="xmrto_error_012">リクエストは多すぎます</string>
-
     <string name="street_sweep_amount">残高合計！</string> <!-- as in: "everything in the account" = "all the money" -->
 
     <string name="menu_ledger_seed">Ledgerシードを転換</string>
@@ -386,8 +376,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -411,4 +401,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
