--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -35,29 +35,26 @@
     <string name="info_ledger_enabled">Ledger ingeschakeld. Tik voor meer info.</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>Je hebt een Bitcoin-adres ingevoerd.</b><br/>
-        <i>Je verzendt XMR en de ontvanger krijgt BTC via <b>SideShift.ai</b>.</i>
+        <b>Je hebt een %1$s-adres ingevoerd.</b><br/>
+        <i>Je verzendt XMR en de ontvanger krijgt %1$s via <b>SideShift.ai</b>.</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">SideShift.ai-opdracht</string>
 
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
     <string name="info_send_xmrto_paid">Wacht op bevestiging</string>
     <string name="info_send_xmrto_unpaid">Wacht op betaling</string>
     <string name="info_send_xmrto_error">Fout bij SideShift.ai (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC verzonden!</string>
+    <string name="info_send_xmrto_sent">%1$s verzonden!</string>
     <string name="info_send_xmrto_query">Aanvragen…</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
-        <b>Je kunt  %1$s &#8212; %2$s BTC verzenden</b>.<br/>
-        <i><b>SideShift.ai</b> biedt <u>nu</u> een wisselkoers van <b>%3$s BTC</b> aan</i>.
-    ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>Bedragen tot <b>%1$s BTC</b> worden <u>meteen</u> verzonden!</i>
+        <b>Je kunt  %1$s &#8212; %2$s %4$s verzenden</b>.<br/>
+        <i><b>SideShift.ai</b> biedt <u>nu</u> een wisselkoers van <b>%3$s %4$s/XMR</b> aan</i>.
     ]]></string>
 
-    <string name="send_available_btc">Saldo: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">Saldo: %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; Betalings-ID geïntegreerd</string>
     <string name="info_prepare_tx">Transactie wordt voorbereid</string>
@@ -75,13 +72,13 @@
     <string name="text_noretry_monero">Nu zitten we vast…</string>
     <string name="text_noretry">Oeps, SideShift.ai is op dit moment niet beschikbaar.</string>
 
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(Koers: %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(Koers: %1$s %2$s/XMR)</string>
 
     <string name="label_send_btc_xmrto_info">Ga naar SideShift.ai voor hulp en traceren</string>
     <string name="label_send_btc_xmrto_key_lb">Geheime sleutel\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">Geheime sleutel SideShift.ai</string>
-    <string name="label_send_btc_address">BTC-doeladres</string>
+    <string name="label_send_btc_address">%1$s-doeladres</string>
     <string name="label_send_btc_amount">Bedrag</string>
 
     <string name="label_send_txid">Transactie-ID</string>
@@ -242,11 +239,9 @@
     <string name="tx_id">Transactie-ID</string>
     <string name="tx_key">Transactiesleutel</string>
     <string name="tx_destination">Bestemming</string>
-    <string name="tx_destination_btc">Bestemming\nBTC</string>
     <string name="tx_paymentId">Betalings-ID</string>
     <string name="tx_blockheight">Blok</string>
     <string name="tx_amount">Bedrag</string>
-    <string name="tx_amount_btc">Bedrag\nBTC</string>
     <string name="tx_fee">Vergoeding</string>
     <string name="tx_transfers">Betalingen</string>
     <string name="tx_notes">Opmerkingen</string>
@@ -356,11 +351,6 @@
     <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
     <string name="send_address_hint">Ontvanger</string>
 
-    <string name="xmrto_error_001">SideShift.ai offline - try again later</string>
-    <string name="xmrto_error_004">BTC amount out of bounds</string>
-    <string name="xmrto_error_010">Invalid or outdated Payment URL</string>
-    <string name="xmrto_error_012">Too many requests</string>
-
     <string name="street_sweep_amount">EVERYTHING!</string> <!-- as in: "everything in the account" = "all the money" -->
 
     <string name="menu_ledger_seed">Convert Ledger Seed</string>
@@ -383,8 +373,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -408,4 +398,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
