--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -34,29 +34,26 @@
     <string name="info_ledger_enabled">Ledger activată, apasă pentru mai multe informații.</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>Ai introdus o adresă de Bitcoin.</b><br/>
-        <i>Vei trimite XMR și destinatarul va primi BTC folosind serviciul <b>SideShift.ai</b>.</i>
+        <b>Ai introdus o adresă de %1$s.</b><br/>
+        <i>Vei trimite XMR și destinatarul va primi %1$s folosind serviciul <b>SideShift.ai</b>.</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">Ordin SideShift.ai</string>
 
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
     <string name="info_send_xmrto_paid">Confirmare în așteptare</string>
     <string name="info_send_xmrto_unpaid">Plată în așteptare</string>
     <string name="info_send_xmrto_error">Eroare SideShift.ai (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC trimis!</string>
+    <string name="info_send_xmrto_sent">%1$s trimis!</string>
     <string name="info_send_xmrto_query">Interogare &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
-        <b>Poți trimite %1$s &#8212; %2$s BTC</b>.<br/>
-        <i><b>SideShift.ai</b> îți oferă un curs de <b>%3$s BTC</b> <u>în acest moment</u></i>.
-    ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>Sume până la <b>%1$s BTC</b> vor fi trimise <u>instantaneu</u>!</i>
+        <b>Poți trimite %1$s &#8212; %2$s %4$s</b>.<br/>
+        <i><b>SideShift.ai</b> îți oferă un curs de <b>%3$s %4$s/XMR</b> <u>în acest moment</u></i>.
     ]]></string>
 
-    <string name="send_available_btc">Balanță: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">Balanță: %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; Payment ID integrat</string>
     <string name="info_prepare_tx">Se pregătește tranzacția</string>
@@ -74,13 +71,13 @@
     <string name="text_noretry_monero">Pff.. ne-am blocat cum!</string>
     <string name="text_noretry">Oh, serviciul SideShift.ai este momentan indisponibil!</string>
 
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(Rată: %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(Rată: %1$s %2$s/XMR)</string>
 
     <string name="label_send_btc_xmrto_info">Vizitează SideShift.ai pentru suport &amp; interogare</string>
     <string name="label_send_btc_xmrto_key_lb">Cheia secretă \nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">Cheia secretă SideShift.ai </string>
-    <string name="label_send_btc_address">Destinație adresă BTC</string>
+    <string name="label_send_btc_address">Destinație adresă %1$s</string>
     <string name="label_send_btc_amount">Sumă</string>
 
     <string name="label_send_txid">ID Tranzacție </string>
@@ -220,11 +217,9 @@
     <string name="tx_id">ID Tranzacție</string>
     <string name="tx_key">Cheie tranzacție</string>
     <string name="tx_destination">Destinație</string>
-    <string name="tx_destination_btc">Destinație\n(BTC)</string>
     <string name="tx_paymentId">Payment ID</string>
     <string name="tx_blockheight">Monobloc</string>
     <string name="tx_amount">Sumă</string>
-    <string name="tx_amount_btc">Sumă\n(BTC)</string>
     <string name="tx_fee">Comision</string>
     <string name="tx_transfers">Transferuri</string>
     <string name="tx_notes">Notițe</string>
@@ -356,11 +351,6 @@
 
     <string name="send_address_hint">Receiver</string>
 
-    <string name="xmrto_error_001">SideShift.ai offline - try again later</string>
-    <string name="xmrto_error_004">BTC amount out of bounds</string>
-    <string name="xmrto_error_010">Invalid or outdated Payment URL</string>
-    <string name="xmrto_error_012">Too many requests</string>
-
     <string name="street_sweep_amount">EVERYTHING!</string> <!-- as in: "everything in the account" = "all the money" -->
 
     <string name="menu_ledger_seed">Convert Ledger Seed</string>
@@ -383,8 +373,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -408,4 +398,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
