--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -35,29 +35,26 @@
     <string name="info_ledger_enabled">Knjiga računa omogućena, tapni za više info.</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>Ubacio/la si Bitkoin adresu.</b><br/>
-        <i>You&apos;će poslati XMR a primalac će dobiti BTC koristeći <b>SideShift.ai</b> servis.</i>
+        <b>Ubacio/la si %1$s adresu.</b><br/>
+        <i>You&apos;će poslati XMR a primalac će dobiti %1$s koristeći <b>SideShift.ai</b> servis.</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">SideShift.ai Nalog</string>
 
-    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
     <string name="info_send_xmrto_paid">Potvrda u toku</string>
     <string name="info_send_xmrto_unpaid">Plaćanje u toku</string>
     <string name="info_send_xmrto_error">SideShift.ai Greška (%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC Poslato!</string>
+    <string name="info_send_xmrto_sent">%1$s Poslato!</string>
     <string name="info_send_xmrto_query">Ispitivanje &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
-        <b>Možeš poslati %1$s &#8212; %2$s BTC</b>.<br/>
-        <i><b>SideShift.ai</b> daje ti devizni kurs od <b>%3$s BTC</b> <u>trenutno</u></i>.
-    ]]></string>
-    <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>Sume do <b>%1$s BTC</b> biće poslate <u>instantly</u>!</i>
+        <b>Možeš poslati %1$s &#8212; %2$s %4$s</b>.<br/>
+        <i><b>SideShift.ai</b> daje ti devizni kurs od <b>%3$s %4$s/XMR</b> <u>trenutno</u></i>.
     ]]></string>
 
-    <string name="send_available_btc">Stanje: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">Stanje: %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; ID plaćanja integrisan</string>
     <string name="info_prepare_tx">Priprema tvoje transakcije</string>
@@ -75,13 +72,13 @@
     <string name="text_noretry_monero">Sada se zaglavismo!</string>
     <string name="text_noretry">Uh, SideShift.ai izgleda da sad nije dostupan!</string>
 
-    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
-    <string name="text_send_btc_rate">(Rate: %1$s BTC/XMR)</string>
+    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
+    <string name="text_send_btc_rate">(Rate: %1$s %2$s/XMR)</string>
 
     <string name="label_send_btc_xmrto_info">Poseti SideShift.ai za bekap &amp; praćenje</string>
     <string name="label_send_btc_xmrto_key_lb">Tajna šifra\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">SideShift.ai Tajna šifra</string>
-    <string name="label_send_btc_address">Odredište BTC adrese</string>
+    <string name="label_send_btc_address">Odredište %1$s adrese</string>
     <string name="label_send_btc_amount">Suma</string>
 
     <string name="label_send_txid">ID transakcije</string>
@@ -252,11 +249,9 @@
     <string name="tx_id">TX ID</string>
     <string name="tx_key">TX šifra</string>
     <string name="tx_destination">Odredište</string>
-    <string name="tx_destination_btc">Odredište\n(BTC)</string>
     <string name="tx_paymentId">ID plaćanja</string>
     <string name="tx_blockheight">Blok</string>
     <string name="tx_amount">Suma</string>
-    <string name="tx_amount_btc">Suma\n(BTC)</string>
     <string name="tx_fee">Naknada</string>
     <string name="tx_transfers">Transferi</string>
     <string name="tx_notes">Čvorovi</string>
@@ -355,11 +350,6 @@
 
     <string name="send_address_hint">Primalac</string>
 
-    <string name="xmrto_error_001">SideShift.ai van mreže - pokušajte kasnije ponovo</string>
-    <string name="xmrto_error_004">BTC iznos izvan granica</string>
-    <string name="xmrto_error_010">Nevalidan ili neažuriran URL plaćanja</string>
-    <string name="xmrto_error_012">Previše zahteva</string>
-
     <string name="street_sweep_amount">SVE!</string>
 
     <string name="menu_ledger_seed">Pretvori seme iz knjige računa</string>
@@ -382,8 +372,8 @@
     <string name="onboarding_welcome_information">This app allows you to create and use Monero wallets. You can store your sweet moneroj in them.</string>
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
-    <string name="onboarding_xmrto_title">Send Bitcoin</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a Bitcoin address and you\'ll be sending BTC by spending XMR.</string>
+    <string name="onboarding_xmrto_title">Send Crypto</string>
+    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
@@ -407,4 +397,18 @@
 
     <string name="shift_noquote">Cannot get quote</string>
     <string name="shift_checkamount">Check amount and try again</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Ambiguous address.</b><br/>
+        <i>Please select the type above.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Please enter or scan a %1$s address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get %2$s using the <b>SideShift.ai</b> service.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Please enter or scan a Monero address.</b>
+    ]]></string>
 </resources>
